[tool.poetry]
name = "dabest"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
lqrt = "^0.3.3"
fastcore = "^1.5.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"